new version of list locations
