# src/swagger/swagger.json
@@ -1089,7 +1089,10 @@
 						"type": "string"
 					},
 					"destination": {
-						"type": "string"
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
 					},
 					"content": {}
 				},
@@ -1144,7 +1147,10 @@
 						"$ref": "#/components/schemas/JsonValue"
 					},
 					"destination": {
-						"type": "string"
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
 					},
 					"end": {
 						"type": "string",
@@ -1311,7 +1317,10 @@
 						"type": "string"
 					},
 					"destination": {
-						"type": "string"
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
 					},
 					"content": {}
 				},
@@ -1736,103 +1745,46 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"IListLocationResponse": {
+			"StandardLocation": {
 				"properties": {
-					"data": {
+					"type": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"code": {
+						"type": "string"
+					},
+					"city": {
+						"type": "string"
+					},
+					"country": {
+						"type": "string"
+					},
+					"region": {
+						"type": "string"
+					},
+					"geoId": {
+						"type": "string"
+					},
+					"source": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"type",
+					"name",
+					"source"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"StandardLocationResponse": {
+				"properties": {
+					"locations": {
 						"items": {
-							"properties": {
-								"navigation": {
-									"properties": {
-										"relevantHotelParams": {
-											"properties": {
-												"localizedName": {
-													"type": "string"
-												},
-												"entityType": {
-													"type": "string"
-												},
-												"entityId": {
-													"type": "string"
-												}
-											},
-											"required": [
-												"localizedName",
-												"entityType",
-												"entityId"
-											],
-											"type": "object"
-										},
-										"relevantFlightParams": {
-											"properties": {
-												"localizedName": {
-													"type": "string"
-												},
-												"flightPlaceType": {
-													"type": "string"
-												},
-												"entityId": {
-													"type": "string"
-												},
-												"skyId": {
-													"type": "string"
-												}
-											},
-											"required": [
-												"localizedName",
-												"flightPlaceType",
-												"entityId",
-												"skyId"
-											],
-											"type": "object"
-										},
-										"localizedName": {
-											"type": "string"
-										},
-										"entityType": {
-											"type": "string"
-										},
-										"entityId": {
-											"type": "string"
-										}
-									},
-									"required": [
-										"relevantHotelParams",
-										"relevantFlightParams",
-										"localizedName",
-										"entityType",
-										"entityId"
-									],
-									"type": "object"
-								},
-								"presentation": {
-									"properties": {
-										"id": {
-											"type": "string"
-										},
-										"subtitle": {
-											"type": "string"
-										},
-										"suggestionTitle": {
-											"type": "string"
-										},
-										"title": {
-											"type": "string"
-										}
-									},
-									"required": [
-										"id",
-										"subtitle",
-										"suggestionTitle",
-										"title"
-									],
-									"type": "object"
-								}
-							},
-							"required": [
-								"navigation",
-								"presentation"
-							],
-							"type": "object"
+							"$ref": "#/components/schemas/StandardLocation"
 						},
 						"type": "array"
 					},
@@ -1844,9 +1796,8 @@
 					}
 				},
 				"required": [
-					"data",
-					"status",
-					"message"
+					"locations",
+					"status"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -6424,6 +6375,114 @@
 				}
 			}
 		},
+		"/locations/list-google": {
+			"post": {
+				"operationId": "list_location_by_google",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/StandardLocationResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Location"
+				],
+				"security": [
+					{
+						"BearerAuth": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ListLocationType"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/locations/list-booking": {
+			"post": {
+				"operationId": "list_location_by_booking",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/StandardLocationResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Location"
+				],
+				"security": [
+					{
+						"BearerAuth": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ListLocationType"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/locations/list2": {
+			"post": {
+				"operationId": "list_location2",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/StandardLocationResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Location"
+				],
+				"security": [
+					{
+						"BearerAuth": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ListLocationType"
+							}
+						}
+					}
+				}
+			}
+		},
 		"/locations/list": {
 			"post": {
 				"operationId": "list_location",
@@ -6433,7 +6492,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/IListLocationResponse"
+									"$ref": "#/components/schemas/StandardLocationResponse"
 								}
 							}
 						}
